[package]
name = "yx_cli"
version = "0.1.0"
edition = "2021"
authors = ["superfreeeee"]
description = "Simple command line tools implement by @youxian"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "yx"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
yx_common = { version = "0.1.0", path = "../common" }
